--- a/README
+++ b/README
@@ -2,3 +2,5 @@ The Makefile simply checks out all (most!) ImpFS repos and builds them
 with dune.
 
 The command `make with_docker` will attempt to use Docker. 
+
+Docs are available at https://tomjridge.github.io/tjr_imp_build_script/
